--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         <li><a href="http://keizobookman.hatenablog.com/">hatenablog</a></li>
         <li><a href="https://github.com/keizo042">github.com</a></li>
         <li><a href="http://qiita.com/keizo042">qiita</a></li>
+        <li><a href="http://twitter.com/keizo042">twitter</a></li>
       </ul>
     </h2>
+    <a href="/slide/list.html">slide list</a>
 
 
   </body>
