--- a/slide/list.html
+++ b/slide/list.html
@@ -5,6 +5,6 @@
   <title></title>
 </head>
 <body>
-  https://speakerdeck.com/keizobookman
+  <a href="https://speakerdeck.com/keizobookman"> speakerdeck</a>
 </body>
 </html>
