--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       gopher<br>
       mruby user<br>
       <ul>
-        <li><a href="http://keizobookman.hatenablog.com/">hatenablog</a></li>
+        <li><a href="http://keizo042.hatenablog.com/">hatenablog</a></li>
         <li><a href="https://github.com/keizo042">github.com</a></li>
         <li><a href="http://qiita.com/keizo042">qiita</a></li>
         <li><a href="http://twitter.com/keizo042">twitter</a></li>
